--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -6,8 +6,14 @@
   letter-spacing: 0.02em;
   margin-left: auto;
   margin-right: auto;
+  .nav,
+  .contacts {
+    @include mq(mob-only) {
+      display: none;
+    }
+  }
   .logo {
-    margin-right: 93px;
+    margin-right: 331px;
     padding-top: 24px;
     padding-bottom: 24px;
     &-text {
