--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@ ul {
 
 :root {
   /* Змінні для флексу */
-  --card-item: 4;
+  --card-item: 1;
   --gap: 30px;
 }
 
@@ -89,13 +89,24 @@ body {
 }
 
 .container {
-  width: 1200px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
-  /* outline: 2px solid tomato;
-  outline-offset: 2px; */
+}
+@media screen and (min-width: 480px) {
+  .container {
+    width: 450px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 738px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1170px;
+  }
 }
 
 .section {
@@ -770,6 +781,12 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
+@media (max-width: 767.98px) {
+  .header .nav,
+.header .contacts {
+    display: none;
+  }
+}
 .header .logo {
   margin-right: 93px;
   padding-top: 24px;
@@ -794,25 +811,37 @@ body {
 .hero {
   background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/hero-img/overlay.jpg");
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero-img/overlay.jpg");
-  max-width: 1600px;
-  min-height: 600px;
+  max-width: 479px;
+  min-height: 400px;
   margin-left: auto;
   margin-right: auto;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  padding-top: 118px;
+  padding-bottom: 118px;
   text-align: center;
   background-color: #2f303a;
 }
+@media screen and (min-width: 1200px) {
+  .hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
+  .hero .hero__title {
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    max-width: 670px;
+  }
+}
 .hero__title {
   display: inline-block;
-  max-width: 670px;
+  max-width: 360px;
   margin-bottom: 30px;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.62;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
@@ -993,8 +1022,10 @@ body {
   padding-top: 0;
 }
 
-.work__list {
-  --card-item: 3;
+@media screen and (min-width: 768px) {
+  .work__list {
+    --card-item: 2;
+  }
 }
 
 .work__item {
