--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,9 +1,16 @@
 .container {
-  width: 1200px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
-  /* outline: 2px solid tomato;
-	outline-offset: 2px; */
+  @include mq(mob) {
+    width: 480px;
+  }
+  @include mq(tab) {
+    width: 768px;
+  }
+  @include mq(desk) {
+    width: 1200px;
+  }
 }
