--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,28 +1,38 @@
 .hero {
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url('../images/hero-img/overlay.jpg');
-  max-width: 1600px;
-  min-height: 600px;
+  max-width: 100%;
+  min-height: 400px;
   margin-left: auto;
   margin-right: auto;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-
-  padding-top: 200px;
-  padding-bottom: 200px;
+  padding-top: 118px;
+  padding-bottom: 118px;
   text-align: center;
   background-color: $dark-background;
+  @include mq(desk) {
+    padding-top: 200px;
+    padding-bottom: 200px;
+    max-height: 600px;
+  }
   &__title {
     display: inline-block;
-    max-width: 670px;
+    max-width: 360px;
     margin-bottom: 30px;
     font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
+    font-size: 26px;
+    line-height: 1.62;
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: $primary-white;
+    @include mq(desk) {
+      font-weight: 900;
+      font-size: 44px;
+      line-height: 1.36;
+      max-width: 670px;
+    }
   }
 }
