--- a/sass/base/_section.scss
+++ b/sass/base/_section.scss
@@ -1,6 +1,10 @@
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  @include mq(desk-only) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 .section-title {
   margin-bottom: 50px;
