--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,10 +1,34 @@
 .footer {
+  display: flex;
+  flex-direction: column;
   background-color: $dark-background;
   padding-top: 60px;
   padding-bottom: 60px;
   margin-left: auto;
   margin-right: auto;
-
+  @include mq(mob) {
+    padding-top: 60px;
+    padding-bottom: 60px;
+    .email-subscribe {
+      flex-wrap: wrap;
+    }
+    .logo,
+    .address,
+    .address__item {
+      display: flex;
+      justify-content: center;
+    }
+    .footer__tittle,
+    .subscribe-title {
+      text-align: center;
+    }
+  }
+  @include mq(tab) {
+  }
+  &__element {
+    margin-left: auto;
+    margin-right: auto;
+  }
   &__tittle {
     display: block;
     margin-top: 0;
@@ -16,8 +40,14 @@
   }
   &__container {
     display: flex;
+    flex-direction: column;
+    gap: 60px;
     align-items: baseline;
     justify-content: space-between;
+    @include mq(tab) {
+      flex-direction: row;
+      flex-wrap: wrap;
+    }
   }
   .logo {
     margin-bottom: 20px;
