--- a/sass/layout/_partners.scss
+++ b/sass/layout/_partners.scss
@@ -18,7 +18,15 @@
 }
 
 .partners__item {
-  --card-item: 6;
+  @include mq(mob) {
+    --card-item: 2;
+  }
+  @include mq(tab) {
+    --card-item: 3;
+  }
+  @include mq(desk) {
+    --card-item: 6;
+  }
 }
 
 .partners__link:hover,
