--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,7 +11,7 @@
 @import './components/adress';
 @import './components/backdrop';
 @import './components/btn';
-@import './components/contact';
+@import './components/contacts';
 @import './components/filter';
 @import './components/logo';
 @import './components/modal';
