--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -4,7 +4,7 @@
   padding: 40px;
   top: 50%;
   left: 50%;
-  width: 530px;
+  width: 450px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -12,6 +12,9 @@
   transition: transform 1200ms cubic-bezier(0.4, 0, 0.2, 1),
     opacity 1200ms cubic-bezier(0.4, 0, 0.2, 1);
   transform: translate(-50%, -50%) scale(1) rotate(0);
+  @include mq(desk) {
+    width: 530px;
+  }
   &__icon {
     display: block;
     transition: fill $transition;
