--- a/sass/components/_register.scss
+++ b/sass/components/_register.scss
@@ -8,8 +8,6 @@
   margin-bottom: 15px;
 }
 
-/* ---------- */
-/* modal form */
 .register__group {
   display: flex;
   flex-direction: column;
@@ -47,10 +45,13 @@
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   outline: transparent;
-  width: 448px;
+  width: 370px;
   height: 40px;
   padding: 12px 42px;
   transition: border-color $transition;
+  @include mq(desk) {
+    width: 448px;
+  }
 }
 
 .register__user-icon {
