--- a/sass/main.scss
+++ b/sass/main.scss
@@ -20,6 +20,7 @@
 @import './components/subscribe-form';
 @import './components/register';
 @import './components/user-agreement';
+@import './components/mobile-menu';
 
 @import './layout/features';
 @import './layout/footer';
