--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -9,27 +9,53 @@
   position: absolute;
   top: 10px;
   right: 10px;
+
   &__icon {
     fill: $icon-black;
   }
+
   @include mq(tab) {
     display: none;
   }
 }
+
 .menu-overlay {
-  display: none;
   z-index: 100;
-  position: fixed;
-  width: 100%;
-  height: 100%;
+
   top: 0;
   left: 0;
+  position: fixed;
+
+  width: 100%;
+  height: 100%;
+
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: opacity $transition, visibility $transition;
+
   background-color: transparent;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08),
     0px 1px 3px rgba(0, 0, 0, 0.16);
+
+  @include mq(tab) {
+    display: none;
+  }
+
+  &.is-open {
+    @include mq(tab) {
+      display: none;
+    }
+
+    visibility: visible;
+    opacity: 1;
+    pointer-events: initial;
+  }
 }
 .menu-container {
-  display: none;
+  @include mq(tab) {
+    display: none;
+  }
   position: relative;
   background-color: $primary-white;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08),
@@ -41,21 +67,32 @@
   padding: 48px 40px;
   font-weight: 500;
   letter-spacing: 0.02em;
+  transition: transform $transition;
+  transform: translateX(100%);
+
+  .menu-overlay.is-open & {
+    transform: translateX(0);
+  }
 }
+
 @include mq(mob-only) {
   .nav {
     justify-content: start;
+
     &__list {
       flex-direction: column;
       gap: 32px;
     }
+
     &__link {
       padding: 0;
       font-size: 40px;
       line-height: 47px;
     }
+
     margin-bottom: auto;
   }
+
   .contacts {
     flex-direction: column-reverse;
     gap: 32px;
@@ -64,18 +101,22 @@
       font-size: 24px;
       line-height: 1.17;
     }
+
     &__link-icon {
       display: none;
     }
+
     .phone {
       font-size: 34px;
 
       line-height: 1.18;
       color: $accent;
     }
+
     margin-bottom: 64px;
   }
 }
+
 .modal__btn {
   position: absolute;
   top: 10px;
@@ -86,19 +127,18 @@
 }
 
 .mobile-social__list {
-  &__icon {
-    display: none;
-  }
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
 }
+
 .mobile-social__link {
   font-size: 18px;
   line-height: 1.22;
   display: flex;
   color: $accent;
 }
+
 .mobile-social__item:not(:last-child) .mobile-social__link {
   padding-right: 10px;
   border-right: 1px solid rgba(33, 33, 33, 0.2);
@@ -112,4 +152,3 @@
 //   width: 1px;
 //   border: 1px solid rgba(33, 33, 33, 0.2);
 //   margin-left: 10px;
-// }
