--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,8 +1,8 @@
 .hero {
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url('../images/hero-img/overlay.jpg');
-  max-width: 100%;
-  min-height: 400px;
+  width: 100%;
+  max-height: 400px;
   margin-left: auto;
   margin-right: auto;
   background-repeat: no-repeat;
@@ -12,11 +12,19 @@
   padding-bottom: 118px;
   text-align: center;
   background-color: $dark-background;
+  @include mq(mob) {
+    max-width: 768px;
+  }
+  @include mq(tab) {
+    max-width: 1200px;
+  }
   @include mq(desk) {
+    max-width: 1600px;
     padding-top: 200px;
     padding-bottom: 200px;
     max-height: 600px;
   }
+
   &__title {
     display: inline-block;
     max-width: 360px;
