--- a/css/main.css
+++ b/css/main.css
@@ -302,7 +302,9 @@ body {
   padding: 40px;
   top: 50%;
   left: 50%;
-  width: 450px;
+  width: 100%;
+  overflow: auto;
+  max-width: 450px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -313,6 +315,11 @@ body {
   transition: transform 1200ms cubic-bezier(0.4, 0, 0.2, 1), opacity 1200ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 1200ms cubic-bezier(0.4, 0, 0.2, 1);
   -webkit-transform: translate(-50%, -50%) scale(1) rotate(0);
           transform: translate(-50%, -50%) scale(1) rotate(0);
+}
+@media (max-width: 767.98px) {
+  .modal {
+    height: 100%;
+  }
 }
 @media screen and (min-width: 1200px) {
   .modal {
@@ -386,18 +393,19 @@ body {
   position: relative;
 }
 
-.nav__link--current::after {
-  position: absolute;
-  bottom: -1px;
-  content: "";
-  display: block;
-  width: 100%;
-  height: 4px;
-  padding: 0;
-  border-radius: 2px;
-  background-color: #2196f3;
+@media screen and (min-width: 768px) {
+  .nav__link--current::after {
+    position: absolute;
+    bottom: -1px;
+    content: "";
+    display: block;
+    width: 100%;
+    height: 4px;
+    padding: 0;
+    border-radius: 2px;
+    background-color: #2196f3;
+  }
 }
-
 .social__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -451,7 +459,8 @@ body {
 }
 
 .email-subscribe-input {
-  width: 450px;
+  width: 100%;
+  max-width: 450px;
   height: 50px;
   padding: 15px 16px;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -555,6 +564,8 @@ body {
 }
 
 .register__group {
+  -ms-flex-line-pack: center;
+      align-content: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -598,7 +609,8 @@ body {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   outline: transparent;
-  width: 370px;
+  max-width: 370px;
+  width: 100%;
   height: 40px;
   padding: 12px 42px;
   -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -701,6 +713,12 @@ body {
   cursor: pointer;
   display: block;
 }
+@media (max-width: 1199.98px) {
+  .user-agreement__label {
+    font-size: 12px;
+    line-height: 1.17;
+  }
+}
 
 .user-agreement__input:focus-within ~ .user-agreement__icon .user-agreement__icon--uncheck,
 .user-agreement__input:hover ~ .user-agreement__icon .user-agreement__icon--uncheck {
@@ -709,6 +727,11 @@ body {
 
 .user-agreement__group:focus-within .user-agreement__icon:checked + .user-agreement__icon .user-agreement__icon--uncheck {
   opacity: 0;
+}
+
+.user-agreement__icon {
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
 }
 
 .user-agreement__icon--check {
@@ -787,6 +810,7 @@ body {
 }
 
 .menu-container {
+  overflow: auto;
   position: relative;
   background-color: #ffffff;
   -webkit-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
@@ -800,6 +824,7 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  gap: 64px;
   padding: 48px 40px;
   font-weight: 500;
   letter-spacing: 0.02em;
@@ -818,6 +843,14 @@ body {
 .menu-overlay.is-open .menu-container {
   -webkit-transform: translateX(0);
           transform: translateX(0);
+}
+.menu-container .modal__btn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  border: none;
+  width: 40px;
+  height: 40px;
 }
 
 @media (max-width: 767.98px) {
@@ -845,7 +878,6 @@ body {
         -ms-flex-direction: column-reverse;
             flex-direction: column-reverse;
     gap: 32px;
-    margin-bottom: 64px;
   }
   .contacts__link {
     font-size: 24px;
@@ -860,15 +892,6 @@ body {
     color: #2196f3;
   }
 }
-.modal__btn {
-  position: absolute;
-  top: 10px;
-  right: 15px;
-  border: none;
-  width: 40px;
-  height: 40px;
-}
-
 .mobile-social__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -995,12 +1018,6 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
   gap: 60px;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
 }
 @media screen and (min-width: 768px) {
   .footer__container {
