--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -4,7 +4,12 @@
   padding: 40px;
   top: 50%;
   left: 50%;
-  width: 450px;
+  width: 100%;
+  @include mq(mob-only) {
+    height: 100%;
+  }
+  overflow: auto;
+  max-width: 450px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
