--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -27,16 +27,17 @@
   color: $accent;
   position: relative;
 }
+@include mq(tab) {
+  .nav__link--current::after {
+    position: absolute;
+    bottom: -1px;
+    content: '';
 
-.nav__link--current::after {
-  position: absolute;
-  bottom: -1px;
-  content: '';
-
-  display: block;
-  width: 100%;
-  height: 4px;
-  padding: 0;
-  border-radius: 2px;
-  background-color: $accent;
+    display: block;
+    width: 100%;
+    height: 4px;
+    padding: 0;
+    border-radius: 2px;
+    background-color: $accent;
+  }
 }
