--- a/sass/components/_register.scss
+++ b/sass/components/_register.scss
@@ -9,6 +9,7 @@
 }
 
 .register__group {
+  align-content: center;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -45,7 +46,8 @@
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   outline: transparent;
-  width: 370px;
+  max-width: 370px;
+  width: 100%;
   height: 40px;
   padding: 12px 42px;
   transition: border-color $transition;
