--- a/sass/components/_subscribe-form.scss
+++ b/sass/components/_subscribe-form.scss
@@ -5,7 +5,8 @@
 }
 
 .email-subscribe-input {
-  width: 450px;
+  width: 100%;
+  max-width: 450px;
   height: 50px;
   padding: 15px 16px;
   border: 1px solid rgba(255, 255, 255, 0.3);
