--- a/css/main.css
+++ b/css/main.css
@@ -121,13 +121,18 @@ body {
 }
 
 .section-title {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
   color: #212121;
+}
+@media screen and (min-width: 1200px) {
+  .section-title {
+    margin-bottom: 50px;
+  }
 }
 
 .address {
@@ -750,7 +755,7 @@ body {
   color: #2196f3;
 }
 
-.menu-btn {
+.mobile-menu__btn {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -767,11 +772,11 @@ body {
   top: 10px;
   right: 10px;
 }
-.menu-btn__icon {
+.mobile-menu__btn__icon {
   fill: #000000;
 }
 @media screen and (min-width: 768px) {
-  .menu-btn {
+  .mobile-menu__btn {
     display: none;
   }
 }
@@ -1061,7 +1066,7 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
-.header .menu-btn {
+.header .mobile-menu__btn {
   margin-left: auto;
 }
 @media (max-width: 767.98px) {
