--- a/sass/base/_section.scss
+++ b/sass/base/_section.scss
@@ -7,7 +7,10 @@
   }
 }
 .section-title {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+  @include mq(desk) {
+    margin-bottom: 50px;
+  }
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
