--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -6,7 +6,7 @@
   letter-spacing: 0.02em;
   margin-left: auto;
   margin-right: auto;
-  .menu-btn {
+  .mobile-menu__btn {
     margin-left: auto;
   }
   @include mq(mob-only) {
